Fix collapsable content in the spam queue

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -8945,8 +8945,9 @@ button.close {
 .table-data-content tbody td {
   vertical-align: top;
 }
+.table-data-content .media + .post-content,
 .table-data-content .media + .userContent {
-  margin-top: 8px;
+  margin-top: 16px;
 }
 
 .table-data-cell, .table-summary th,
@@ -8964,6 +8965,12 @@ button.close {
 }
 .table-data-body tr:hover, .table-summary tbody tr:hover, .table-data tbody tr:hover {
   background-color: #f9fdfe;
+}
+.table-data-body tr:hover .collapsableContent, .table-summary tbody tr:hover .collapsableContent, .table-data tbody tr:hover .collapsableContent {
+  background-color: #f9fdfe;
+}
+.table-data-body tr:hover .collapsableContent-gradient, .table-summary tbody tr:hover .collapsableContent-gradient, .table-data tbody tr:hover .collapsableContent-gradient {
+  background: linear-gradient(to bottom, rgba(249, 253, 254, 0), #f9fdfe);
 }
 
 .table-data-head tr, .table-data thead tr {
@@ -12137,133 +12144,6 @@ body.isMobile .Popup.hasRichEditor .Border {
  * @copyright 2009-2019 Vanilla Forums Inc.
  * @license GPL-2.0-only
  */
-.embedQuote {
-  display: block;
-  width: 100%;
-}
-
-.embedQuote-content {
-  display: block;
-  width: 100%;
-}
-
-.embedQuote-header {
-  position: relative;
-}
-
-.embedQuote-userLink {
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.embedQuote-userName {
-  padding: 0;
-  color: #6f737a;
-  font-weight: 700;
-  font-size: 12px;
-}
-
-.embedQuote-userPhoto {
-  display: block;
-  width: 24px;
-  height: 24px;
-  border-radius: 6px;
-}
-
-.embedQuote-excerpt {
-  white-space: normal;
-}
-
-.embedQuote-collapseButton {
-  position: absolute;
-  top: 0;
-  right: 8px;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background: none;
-  border: none;
-  cursor: pointer;
-  margin-left: auto;
-  height: 36px;
-  width: 36px;
-  opacity: 0.6;
-  padding: 0;
-}
-.embedQuote-collapseButton:active {
-  opacity: 1;
-}
-.embedQuote-collapseButton:focus {
-  opacity: 1;
-  outline: none;
-}
-.embedQuote-collapseButton:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.embedQuote-title {
-  padding-right: 36px;
-}
-
-.embedQuote-chevronUp,
-.embedQuote-chevronDown {
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  vertical-align: 0.2em;
-}
-
-.embedQuote-dateTime {
-  font-size: 12px;
-  color: #6f737a;
-  margin-left: 8px;
-}
-
-.embedQuote-header {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-justify-content: flex-start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  padding-top: 14px;
-  padding-left: 14px;
-  padding-right: 14px;
-  padding-bottom: 0;
-}
-
-.embedQuote-body {
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-.embedQuote-body::before, .embedQuote-body::after {
-  content: initial;
-}
-
-.embedQuote-metaLink {
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-
 /*!
  * @copyright 2009-2019 Vanilla Forums Inc.
  * @license GPL-2.0-only
